Fix sidebar toggler z-index and check fix article, opinion, image, album and video lisings for small devices

--- a/public/assets/src/sidebar/less/components/_toggler.less
+++ b/public/assets/src/sidebar/less/components/_toggler.less
@@ -3,9 +3,11 @@
   position: fixed;
   padding: 15px;
   color: #fff;
+  height: @sidebar-width-collapsed;
   left: @sidebar-width;
   transition: all .25s;
-  z-index: 20;
+  width: @sidebar-width-collapsed;
+  z-index: 275;
 }
 
 .collapsed .sidebar-toggler,
@@ -16,6 +18,5 @@
 @media (max-width: (@phone-width - 1px)) {
   .sidebar-toggler {
     display: block;
-    z-index: 20;
   }
 }
